WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118164
-webkit-line-break: after-white-space sometimes truncates DOM on copy & paste
https://bugs.webkit.org/show_bug.cgi?id=118164
Summary
-webkit-line-break: after-white-space sometimes truncates DOM on copy & paste
Ryosuke Niwa
Reported
2013-06-27 18:39:50 PDT
Created
attachment 205655
[details]
Reduction Reproduction steps: 1. Open the attached document 2. Select all & copy in the first box. 3. Paste in the second box. Expected result: The first box and the second box look identical. Actual Result: The third line "WebKit" is never pasted in the second box. <
rdar://problem/13926528
>
Attachments
Reduction
(493 bytes, text/html)
2013-06-27 18:39 PDT
,
Ryosuke Niwa
no flags
Details
Fixes the bug
(5.93 KB, patch)
2013-06-27 21:18 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from APPLE-EWS-2 for win-future
(1.06 MB, application/zip)
2013-06-28 06:39 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-06-27 21:15:32 PDT
This is probably a regression from
http://trac.webkit.org/changeset/133820
.
Ryosuke Niwa
Comment 2
2013-06-27 21:18:54 PDT
Created
attachment 205659
[details]
Fixes the bug
Build Bot
Comment 3
2013-06-28 06:39:31 PDT
Comment on
attachment 205659
[details]
Fixes the bug
Attachment 205659
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/919327
New failing tests: csswg/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-002.html csswg/submitted/shapes/shape-outside/shape-outside-floats-horizontal-rectangle-002.html csswg/submitted/shapes/shape-outside/shape-outside-floats-horizontal-rectangle-000.html fast/js/global-constructors-attributes-shared-worker.html fast/js/global-constructors-attributes-dedicated-worker.html fast/media/mq-transform-03.html csswg/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-001.html csswg/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-000.html fast/forms/search-event-delay.html csswg/submitted/shapes/shape-outside/shape-outside-floats-horizontal-rectangle-001.html fast/media/mq-transform-02.html platform/win/accessibility/multiple-select-element-role.html csswg/submitted/shapes/shape-outside/shape-outside-floats-square-000.html
Build Bot
Comment 4
2013-06-28 06:39:33 PDT
Created
attachment 205708
[details]
Archive of layout-test-results from APPLE-EWS-2 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: APPLE-EWS-2 Port: win-future Platform: CYGWIN_NT-6.1-WOW64-1.7.20-0.266-5-3-i686-32bit
Ryosuke Niwa
Comment 5
2013-06-28 09:25:54 PDT
It seems like these css tests are failing everywhere on Win-EWS :(
WebKit Commit Bot
Comment 6
2013-06-28 12:59:41 PDT
Comment on
attachment 205659
[details]
Fixes the bug Clearing flags on attachment: 205659 Committed
r152185
: <
http://trac.webkit.org/changeset/152185
>
WebKit Commit Bot
Comment 7
2013-06-28 12:59:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug